[FEAT] Move languages to new API
